2010-09-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBS): add LIBSOCKET after GLLIB_A so that
	gethostname is found in the right place on woe32
	(SUBDIRS): depend on configure

2010-09-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* modules/syscalls/calls.c (nftw_fn): do not call lisp code while
	current thread is marked to be in blocking system call

2010-09-15  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (rawsock_error): use ecode instead of
	errno which can be reset by strerror

2010-09-15  Sam Steingold  <sds@gnu.org>

	* .gdbinit (run_mod_test): accept "linkset" argument

2010-09-15  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (checker): remove obsolete reverse
	* lispbibl.d (c_lisp_map_t): remove obsolete use_default_function_p
	* misc.d (map_lisp_to_c, map_c_to_lisp): do not use it
	* modules/syscalls/calls.c: update DEFCHECKER invocations

2010-09-15  Sam Steingold  <sds@gnu.org>

	* win32.d (gethostname): #undef after including <unistd.h> and
	before including winsock headers, as per
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23076>

2010-09-15  Sam Steingold  <sds@gnu.org>

	* utils/gen-uninames: remove, superseded by
	src/gllib/uniname/gen-uninames.lisp

2010-09-15  Sam Steingold  <sds@gnu.org>

	update gnulib
	* modules/regexp/gllib/regex.h, modules/regexp/glm4/regex.m4:
	* gllib/langinfo.in.h, gllib/nl_langinfo.c, gllib/string.in.h:
	* gllib/wctype.in.h, gllib/uniwidth/width.c, glm4/langinfo_h.m4:
	* glm4/lib-ld.m4, glm4/memchr.m4, glm4/progtest.m4:
	* glm4/sockets.m4, glm4/wctype_h.m4: update
	* glm4/socketlib.m4: add

2010-09-15  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCC_CREATESHARED): use soname & output_objdir
	separately because of cygwin

2010-09-14  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): return the truename of the loaded file

2010-09-14  Sam Steingold  <sds@gnu.org>

	interface to the POSIX function nftw()
	* modules/syscalls/calls.c (FILE-TREE-WALK): add